test/testData/parser/negative/expressions/ternaryOp.err
test/testData/parser/negative/expressions/ternaryOp.c:13:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:14:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:15:8: warning: pointer/integer type mismatch in conditional expression ('signed int' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:15:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:16:8: warning: pointer/integer type mismatch in conditional expression ('signed int' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:16:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:17:8: warning: pointer/integer type mismatch in conditional expression ('signed int' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:17:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:18:8: error: incompatible operand types ('signed int' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:19:8: warning: pointer/integer type mismatch in conditional expression ('signed int' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:19:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:20:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:21:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:22:8: error: incompatible operand types ('float' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:23:8: error: incompatible operand types ('float' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:24:8: error: incompatible operand types ('float' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:25:8: error: incompatible operand types ('float' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:26:8: error: incompatible operand types ('float' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:27:8: warning: pointer/integer type mismatch in conditional expression ('*signed int' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:27:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:28:8: error: incompatible operand types ('*signed int' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:29:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:30:8: warning: pointer type mismatch ('*signed int' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:30:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:31:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:32:8: error: incompatible operand types ('*signed int' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:33:8: warning: pointer type mismatch ('*signed int' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:33:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:34:8: warning: pointer/integer type mismatch in conditional expression ('*float' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:34:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:35:8: error: incompatible operand types ('*float' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:36:8: warning: pointer type mismatch ('*float' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:36:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:37:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:38:8: warning: pointer type mismatch ('*float' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:38:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:39:8: error: incompatible operand types ('*float' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:40:8: warning: pointer type mismatch ('*float' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:40:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:41:8: warning: pointer/integer type mismatch in conditional expression ('signed int[20]' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:41:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:42:8: error: incompatible operand types ('signed int[20]' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:43:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:44:8: warning: pointer type mismatch ('signed int[20]' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:44:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:45:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:46:8: error: incompatible operand types ('signed int[20]' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:47:8: warning: pointer type mismatch ('signed int[20]' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:47:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:48:8: error: incompatible operand types ('STRUCT S' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:49:8: error: incompatible operand types ('STRUCT S' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:50:8: error: incompatible operand types ('STRUCT S' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:51:8: error: incompatible operand types ('STRUCT S' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:52:8: error: incompatible operand types ('STRUCT S' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:53:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:54:8: error: incompatible operand types ('STRUCT S' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:55:8: warning: pointer/integer type mismatch in conditional expression ('*STRUCT S' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:55:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:56:8: error: incompatible operand types ('*STRUCT S' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:57:8: warning: pointer type mismatch ('*STRUCT S' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:57:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:58:8: warning: pointer type mismatch ('*STRUCT S' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:58:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:59:8: warning: pointer type mismatch ('*STRUCT S' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:59:3: warning: expression result unused
test/testData/parser/negative/expressions/ternaryOp.c:60:8: error: incompatible operand types ('*STRUCT S' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:61:3: warning: expression result unused
